<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="1.5dp"
    android:layout_marginTop="4.5dp"
    android:layout_marginRight="1.5dp"
    android:layout_marginBottom="0.5dp"
    android:animateLayoutChanges="true"
    android:background="@color/light_blue"
    android:clickable="false"
    android:fadeScrollbars="true"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/gray">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginStart="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.001dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>